[package]
name = "atrox"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atrox-derive = { path = "../atrox-derive" }
serde = { version = "1", features = ["derive"] }
bincode = "1.3.3"
once_cell = "1.18.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmtime = "9.0.4"
